[package]
name = "zone-alloc-strong-handle-derive"
version = "0.1.2"
edition = "2021"
description = "Procedural macro for zone-alloc StrongHandle types."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
categories = ["memory-management", "no-std"]
keywords = ["allocation", "memory", "arena"]
license = "MIT"
documentation = "https://docs.rs/zone_alloc_strong_handle_derive"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-crate = "1.3.1"
quote = "1.0"
syn = "2.0"

[dev-dependencies]
trybuild = "1.0"
zone-alloc = "0.1"
