[package]
name = "zone-alloc"
version = "0.2.0"
edition = "2021"
description = "Containers for zone-based data allocation."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
categories = ["memory-management", "no-std"]
keywords = ["allocation", "memory", "arena"]
license = "MIT"
documentation = "https://docs.rs/zone_alloc"
readme = "README.md"

[features]
default = ["std", "ahash"]

# Depend on the entire Rust standard library.
std = []

# Use the ahash library for hash maps.
ahash = ["dep:ahash", "std"]

[dependencies]
ahash = { version = "0.8.6", optional = true }
