[package]
name = "zone-alloc"
version = "0.4.3"
edition = "2021"
description = "Containers for zone-based data allocation."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
categories = ["memory-management", "no-std"]
keywords = ["allocation", "memory", "arena"]
license = "MIT"
documentation = "https://docs.rs/zone_alloc"
readme = "README.md"

[features]
default = ["std"]

# Depend on the entire Rust standard library.
std = []

# Implement Drop for element reference with the "may_dangle" attribute. 
may-dangle = []

# Use SyncUnsafeCell instead of UnsafeCell for registry entries.
sync-unsafe-cell = []

[dependencies]
hashbrown = "0.14"
